MDEV-8058: funcs_1.innodb_views and funcs_1.memory_views fail

The double call of ref used tables fixed.